Correct size and spacing of tour-step counter

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -90,6 +90,12 @@ body {
 /*==========landing.html==========*/
 
 /*=====feature-tour=====*/
+.introjs-helperNumberLayer{
+  font-size: 1.5em;
+  width: 30px;
+  height:30px;
+  padding-top: 3px;
+}
 
 /*=====how-it-works=====*/
 
